--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "72df50d4-af43-4efc-aa93-ba5fe308b84f",
   "name": "Exsys Issue",
-  "publisher": "Default publisher",
+  "publisher": "Exsys Co., Ltd.",
   "version": "1.0.0.0",
   "brief": "",
   "description": "",
